# rdr

./: .gitpod.yml  404.html  CHANGELOG.md  README.md  classes.ipynb  foo.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  rdr.yaml  sitemap.xml  test.ipynb
.github/workflows/: ci.yml  mkdocs.yml
.rdr/: RDR-0002.md  RDR-0004.md
02_setup/: index.html
03_references/: index.html
docs/: 03_references.md  index.md
example/: design.yml  design2.yml
rdr/: cli.py  config_default.yaml  tasks.py  utils.py
rdr/templates/: dp.md  ep.md  mp.md  rdr.md
search/: search_index.json
tests/: test_rdr.py
