[tool.poetry]
name = "rdr"
version = "0.1.0"
description = "Research design records"
authors = ["Andrew Stewart <andrew.c.stewart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.1"}
confuse = "^1.7.0"
mdutils = "^1.3.1"
HiYaPyCo = "^0.5.0"
Logbook = "^1.5.3"
rich = "^12.4.1"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
changelog-cli = "^0.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rdr = "rdr.cli:app"